# jira-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  TASKS.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7dacb75f4e4d_adiciona_time_tracking_em_issues.py  8e3632b6fc7e_schema_inicial.py  98aa33c46478_adiciona_issue_links.py  a73941366c4f_adiciona_parent_jira_key_em_issues.py  b71d46295ef3_changelog_from_value_to_value_para_text.py  f9e2f2f3b547_adiciona_tech_map_entries.py
backend/app/: main.py
backend/app/api/routes/: health.py  people.py  sites.py  sprints.py  sync.py  tech_map.py
backend/app/cli/: sync.py
backend/app/core/: config.py
backend/app/integrations/google_sheets/: mappers.py
backend/app/integrations/jira/: auth.py  client.py  mappers.py
backend/app/models/: __init__.py  board.py  issue.py  issue_field_change.py  issue_link.py  issue_sprint.py  person.py  project.py  site.py  sprint.py  sync_cursor.py  sync_run.py  tech_map_entry.py
backend/app/schemas/: metrics.py
backend/app/services/: person_metrics.py  sprint_metrics.py  status_order.py  sync_service.py  tech_map_service.py
docs/: data-model.md  jira-integration.md  problemas-dashboard.md  workflow-do-time.md
docs/decisions/: 0001-changelog-generico.md  0002-sem-poetry-no-dockerfile.md  0003-bugs-primeiro-sync-real.md  0004-pessoas-duplicadas-accountid-compartilhado.md  0005-cryptography-pin-illegal-instruction.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
(+22 files in other folders)
