[project]
name = "jira-dashboard-backend"
version = "0.1.0"
description = "Backend da dashboard de Jira da MBC (métricas de sprint e de pessoas)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115,<0.116)",
    "uvicorn[standard] (>=0.32,<0.33)",
    "sqlalchemy (>=2.0,<3.0)",
    "psycopg[binary] (>=3.2,<4.0)",
    "alembic (>=1.14,<2.0)",
    "pydantic-settings (>=2.6,<3.0)",
    "httpx (>=0.27,<0.28)",
    "typer (>=0.13,<0.14)",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.7"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
